objects/Core_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Accountable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Team_Member__c</fullName>
        <label>Duplicate Team Member</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Independent_Reviewer__c</fullName>
        <formula>Release_Role__r.Independent_Reviewer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Independent Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <formula>Release_Role__r.Release_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Role__c</fullName>
        <label>Role ID</label>
        <referenceTo>Release_Role__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Release_Role__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Core_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Role_Name__c</columns>
        <columns>Release_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CTM-{0000000000}</displayFormat>
        <label>Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ODP_VR_MemberRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( User__c )</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>Team Member is required</errorMessage>
    </validationRules>
</CustomObject>